# Siamese

./: .gitignore  CLAUDE.md  COMPLETE_WORK_REPORT.md  DATA_MANIFEST.md  DEEPSPEED.md  DEPLOYMENT.md  FINAL_INVESTIGATION_REPORT.md  GPU_CONFIGURATION_ISSUE.md  NAN_DEBUGGING_GUIDE.md  PROJECTION_QUALITY_ANALYSIS.md  PUSH_INSTRUCTIONS.md  README.md  REMOTE_TRAINING.md  TMUX_GUIDE.md  TRAINING_STATUS_REPORT.md  TRAINING_SUMMARY.md  WorkPlan.md  diagnose_training.sh  pack_training_data.sh  pyproject.toml  quick_start.sh  remote_train.sh  start_training.sh  train_all.sh  train_tmux.sh
configs/: default.yaml  ds_config.json  proposer_ribosome.yaml  proposer_ribosome_multi.yaml  proposer_ribosome_multi_remote.yaml
scripts/: analyze_first_batch.py  check_projection_quality.py  check_training_data.py  ctf_correct.py  ctf_visual_check.py  debug_nan.py  detect_bright_projections.py  eval.py  fix_cs_paths.py  fix_cs_psize.py  generate_data.py  monitor_nan.sh  nan_debugger.py  preprocess_volumes.py  scan_all_training_data.py  train.py  train_proposer.py  train_proposer_ds.py  unify_datasets.py
siamese/data/: __init__.py  cryosparc.py  dataset.py  export.py  generate.py  orientations.py  projection.py  resample.py  transforms.py
siamese/eval/: __init__.py  forward_model.py  metrics.py  retrieval.py
siamese/losses/: __init__.py  gallery_ce.py  infonce.py
siamese/models/: __init__.py  backbone.py  encoder.py  fusion.py  pose_head.py
tests/: test_ctf.py  test_dataset.py  test_encoder.py  test_loss.py  test_pose_head.py  test_resample.py  test_retrieval.py  test_smoke.py
(+8 files in other folders)
